Improve functionality of function checking if footer overlaps fixed elements. Fixed position of clients sidebar scrollbar on IE

--- a/app/assets/stylesheets/clients.scss
+++ b/app/assets/stylesheets/clients.scss
@@ -72,6 +72,7 @@
 
 #clientssidebar {
 	position:fixed;
+	padding-right:25px;
 	top:100px;
 	z-index: 600;
 	bottom:45px;
